# basepaint_timelapse

./: .gitignore  pyproject.toml
basepaint_timelapse/: app.py  generate_video.py  utils.py
